# SIH

./: README.md  data_loader.py  feature_engineering.py  hyperparameter_optimizer.py  neural_net.py  replit.md  statistical_analysis.py
backup/: .replit  batch_processor.py  cactus_events.csv  config.py  data_filters.py  database.py  main.py  model_comparison.py  pyproject.toml  swis_data.json  utils.py  visualization.py
backup/attached_assets/: Pasted-You-are-an-expert-hackathon-AI-developer-Create-a-Python-application-with-the-following-requirement-1752895168858_1752895168858.txt
