[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
